--- a/static/css/scroll.css
+++ b/static/css/scroll.css
@@ -9,5 +9,5 @@
 
 ::-webkit-scrollbar-thumb {
     padding: 10px;
-    background: linear-gradient(to bottom right, #13028f, #182e75);
+    background: linear-gradient(to bottom right, #080808, #020201);
 }
