--- a/static/css/about.css
+++ b/static/css/about.css
@@ -16,8 +16,8 @@
     font-family: Roboto;
     padding-top: 6%;
     /* background: transparent; */
-    background: #151C36;
-    /* background: linear-gradient(to bottom, #122B4E, #000000); */
+    /* background: #151C36; */
+    
     color: white;
 }
 
@@ -30,4 +30,17 @@ h3 {
 #about .uk-h2,
 h2 {
     line-height: 1.1;
+}
+#about::before
+{
+    content:'';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width:100%;
+    height:10px;
+    background: linear-gradient(to bottom,#080808, black);
+    background-blend-mode: multiply;
+    box-shadow: 0px 0px 15px 15px #000000;
+
 }
