--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -145,14 +145,14 @@ section {
 }
 
 .footer-distributed {
-  background: rgb(24, 46, 117);
+  background: black;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
   width: 100%;
   text-align: left;
   font: normal 16px "Open Sans", cursive;
   padding: 25px 20px;
-  margin-top: 250px;
+  margin-top: 50px;
 }
 
 .footer-distributed .footer-left,
