--- a/static/css/sponsor.css
+++ b/static/css/sponsor.css
@@ -4,6 +4,7 @@
 #sponsorContainer {
     height: auto!important;
     margin-top: 60px;
+    margin-bottom: 80px;
 }
 .sponsor-card {
   position: relative;
