--- a/static/css/style.css
+++ b/static/css/style.css
@@ -827,3 +827,9 @@ header ul li a:hover,.active{
   height: 100vh;
   width:110vh;
 }
+.sectionHead
+{
+  font-family: "Crota" !important;
+  color: whitesmoke;
+  font-size:3vmax !important;
+}
