--- a/static/css/style.css
+++ b/static/css/style.css
@@ -123,7 +123,13 @@ html {
   height: 100vh;
 }
 
-
+.title
+{
+  font-size:10vmin !important;
+  font-weight: bolder !important;
+  text-transform: uppercase;
+  margin-top: -10vmin !important;
+}
 /* .hero-heading {
   color: white;
   font-family: "Tigerious";
@@ -455,18 +461,16 @@ main {
 } */
 .content2 {
   margin: 0%;
-  padding: 0%;
+  padding: 10%;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-}
-.content2 span
-{
-  font-family: "LoveAmourBlank";
+  font-weight: bolder;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 .content2 h1 {
   padding-top: 5vw;
   /* padding-top: 400px; */
@@ -476,17 +480,58 @@ main {
   font-weight: 500;
   letter-spacing: 5px;
   cursor: pointer;
-  font-family: "LoveAmourBlank";
+  font-family: 'Anton', sans-serif;
   -webkit-text-stroke: 1px #0A2647;
+  font-size:4rem !important;
+  color:white;
+  /* font-family: 'Merienda', cursive; */
+  animation-name:glow;
+  animation-duration:1s;
+  animation-iteration-count:infinite;
+  animation-direction:alternate;
+  text-transform:uppercase;
+  font-weight: bold !important;
 
 
 }
-
+@media  screen and (max-width:1000px) {
+  .title
+  {
+    margin-top: -20vmin !important;
+  }
+  
+}
+@media screen and (max-width:700px) {
+  .content2 h1 {
+  margin-top:20vmin;
+  }
+ 
+  
+}
+@media screen and (max-width:550px) {
+  .content2 h1 {
+  margin-top:25vmin;
+  }
+  
+}
 .content2 h1 span {
   transition: 0.5s;
-
+  font-size:4rem !important;
+  color:white;
+  /* font-family: 'Merienda', cursive; */
+  animation-name:glow;
+  animation-duration:1s;
+  animation-iteration-count:infinite;
+  animation-direction:alternate;
+  text-transform:uppercase;
+  -webkit-text-stroke: 1px #0A2647;
+  
+  
 }
-
+@keyframes glow{
+  from{text-shadow:0px 0px 2px #fff,0px 0px 2px #614ad3;}
+  to{text-shadow:0px 0px 7px #fff,0px 0px 7px #614ad3;}
+}
 .content2 h1:hover span:nth-child(1) {
   margin-right: 10px;
 
