--- a/static/css/about.css
+++ b/static/css/about.css
@@ -14,13 +14,16 @@
 #about {
     font-size: 1.3rem;
     font-family: Roboto;
-    padding-top: 6%;
+    /* padding-top: 6%; */
     /* background: transparent; */
     /* background: #151C36; */
     
     color: white;
 }
-
+.aboutcontent
+{
+  padding-top: 6%;
+}
 
 #about .uk-h3,
 h3 {
@@ -31,19 +34,19 @@ h3 {
 h2 {
     line-height: 1.1;
 }
-#about::before
+/* #about::before
 {
     content:'';
     position: absolute;
     bottom: -5px;
     left: 0;
     width:100%;
-    height:10px;
-    background: linear-gradient(to bottom,#080808, black);
+    height:15px;
+    background: linear-gradient(to top,#002d3e, black);
     background-blend-mode: multiply;
-    box-shadow: 0px 0px 15px 15px #000000;
+    box-shadow: 0px 0px 5px 5px #002d3e;
 
-}
+}  */
 /* :root {
     --smaller: .75;
   } */
@@ -82,13 +85,7 @@ h2 {
   }
   
   
-  @media screen and (max-width:380px) {
-    .coner
-    {
-        top:0;
-    }
-    
-  }
+  
   @media all and (max-width: 768px) {
     
    
@@ -101,4 +98,20 @@ h2 {
     .time span {
         font-size: 2em;
     }
+  }
+  @media screen and (max-width:450px) {
+    
+    .coner
+    {
+      top:30%;
+    }
+    .time{
+      font-size: 1.7em;
+      padding: 1em 1.5em;
+    }
+    
+    .time span {
+        font-size: 1.7em;
+    }
+    
   }
