--- a/static/css/style.css
+++ b/static/css/style.css
@@ -627,62 +627,6 @@ header ul li a:hover,.active{
   }
 }
 
-#preLoader {
-  background: #020438;
-  font: 14px 'Open Sans', helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-}
-.bx {
-  height: 280px;
-  width: 280px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: #020438;
-  border-radius: 100%;
-  overflow: hidden;
-}
-
-.bx .wter {
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 2;
-  width: 100%;
-  height: 100%;
-  transform: translate(0, 100%);
-  background: #4d6de3;
-  transition: all 0.3s;
-  
-}
-.bx .wter_wave {
-  width: 200%;
-  position: absolute;
-  bottom: 100%;
-  max-width: none !important;
-}
-.bx .wter_wave_back {
-  right: 0;
-  fill: #c7eeff;
-  animation: wave-back 1.4s infinite linear;
-}
-.bx .wter_wave_front {
-  left: 0;
-  fill: #4d6de3;
-  margin-bottom: -1px;
-  animation: wave-front 0.7s infinite linear;
-}
-@keyframes wave-front {
-  100% {
-    transform: translate(-50%, 0);
- }
-}
-@keyframes wave-back {
-  100% {
-    transform: translate(50%, 0);
- }
-}
 
 .sponsorimage
 {
@@ -695,11 +639,15 @@ header ul li a:hover,.active{
   max-height:50vmin;
   width:90% !important;
 }
-.bx
-{
-  height: 100px;
-  width: 100px;
+
 }
+@media only screen and (max-width: 450px) {
+
+  #myVide
+  {
+    height:70vh !important;
+  }
+
 }
   
 #landingpage
