--- a/static/css/style.css
+++ b/static/css/style.css
@@ -643,10 +643,10 @@ header ul li a:hover,.active{
 }
 @media only screen and (max-width: 450px) {
 
-  #myVide
+  /* #myVide
   {
     height:70vh !important;
-  }
+  } */
 
 }
   
