--- a/static/css/style.css
+++ b/static/css/style.css
@@ -121,6 +121,7 @@ html {
 #preLoader {
   width: 100%;
   height: 100vh;
+  background: black;
 }
 
 .title
@@ -658,7 +659,7 @@ header ul li a:hover,.active{
 {
   display:none;
   width:100vw;
-  height:100vh;
+  height:50vh;
 }
 @media only screen and (max-width: 450px) {
 
