--- a/static/css/sponsor.css
+++ b/static/css/sponsor.css
@@ -72,6 +72,7 @@
 
 .sponsor-card .container h1 {
   position: absolute;
+  bottom:20px;
   align-self: flex-end;
   background: transparent;
   z-index: 2;
