--- a/static/css/events.css
+++ b/static/css/events.css
@@ -1,135 +1,114 @@
-*
-{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
-
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
-.event-final
-{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background:transparent;
-
+.event-final {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: transparent;
 }
-.containerevent
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 1200px;
-    flex-wrap: wrap;
-    padding: 40px 0%;
+.containerevent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 1200px;
+  flex-wrap: wrap;
+  padding: 40px 0%;
 }
-.containerevent .card
-{
-    position: relative;
-    width: 320px;
-    height: 320px;
-    box-shadow: inset 5px 5px 5px rgba(0,0,0,0.05),
-                inset -5px -5px 5px rgba(255,255,255,0.5),
-                5px 5px 5px rgba(0,0, 0,0.05),
-                -5px -5px 5px rgba(255,255,255,0.5);
-    border-radius: 15px;
-    margin: 30px;
-
+.containerevent .card {
+  position: relative;
+  width: 320px;
+  height: 320px;
+  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.05),
+    inset -5px -5px 5px rgba(255, 255, 255, 0.5),
+    5px 5px 5px rgba(0, 0, 0, 0.05), -5px -5px 5px rgba(255, 255, 255, 0.5);
+  border-radius: 15px;
+  margin: 30px;
 }
 
-.containerevent .card .box
-{
-    position: absolute;
-    background-image:url("../img/events/metaverse.png");
-    top: 20px;
-    left: 20px;
-    right: 20px;
-    bottom: 20px;
-    box-shadow: 0px 10px 20px rgba(0,0,0,0.1);
-    border-radius: 15px;
-    /* display: flex; */
-    justify-content: center;
-    align-items: center;
-    transition: 0.5s;
+.containerevent .card .box {
+  position: absolute;
+  background-image: url("../../static/cs.png");
+  background-position: center;
+  background-size: 300px 300px;
+  top: 20px;
+  left: 20px;
+  right: 20px;
+  bottom: 20px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
 }
-.containerevent .card .box .content12{
-    padding: 20px;
-    text-align:center;
-    opacity: 0;
+.containerevent .card .box .content12 {
+  padding: 20px;
+  text-align: center;
+  opacity: 0;
 }
 .containerevent .card .box:hover .content12,
-.containerevent .card .box:focus .content12
-{
-    padding: 20px;
-    text-align:center;
-    opacity: 1;
+.containerevent .card .box:focus .content12 {
+  padding: 20px;
+  text-align: center;
+  opacity: 1;
 }
-.containerevent .card .box .content12 h2{
-    position: absolute;
-    
-    
-    top: -10px;
-    right: 30px;
-    font-size: 8em;
-    color: rgba(0,0, 0,0.02);
-    transition: 0.5s;
-    pointer-events: none;
+.containerevent .card .box .content12 h2 {
+  position: absolute;
+
+  top: -10px;
+  right: 30px;
+  font-size: 8em;
+  color: rgba(0, 0, 0, 0.02);
+  transition: 0.5s;
+  pointer-events: none;
 }
 .containerevent .card .box:hover .content12 h2,
-.containerevent .card .box:focus .content12 h2
-{
-    color: rgba(0,0, 0,0.05);
-
+.containerevent .card .box:focus .content12 h2 {
+  color: rgba(0, 0, 0, 0.05);
 }
-.containerevent .card .box .content12 h3
-{
-    font-size: 1.8em;
-    color: #777;
-    z-index: -1;
-    transition: 0.5s;
-
+.containerevent .card .box .content12 h3 {
+  font-size: 1.8em;
+  color: #777;
+  z-index: -1;
+  transition: 0.5s;
 }
-.containerevent .card .box .content12 p{
-    font-size: 1em;
-    font-weight: 300;
-    color: #777;
-    z-index: 1;
-    transition: 0.5s;
+.containerevent .card .box .content12 p {
+  font-size: 1em;
+  font-weight: 300;
+  color: #777;
+  z-index: 1;
+  transition: 0.5s;
 }
-.containerevent .card .box .content12 a
-{
-    position: relative;
-    display: inline-block;
-    padding: 8px 20px;
-    background: #03a9f4;
-    margin-top: 15px;
-    border-radius: 20px;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 400;
-    box-shadow: 0 10px 20px rgba(0,0, 0,0.2); 
+.containerevent .card .box .content12 a {
+  position: relative;
+  display: inline-block;
+  padding: 8px 20px;
+  background: #03a9f4;
+  margin-top: 15px;
+  border-radius: 20px;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 400;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 .containerevent .card .box:hover .content12 a,
-.containerevent .card .box:focus .content12 a
-{
-    background: #ff568f;
-
+.containerevent .card .box:focus .content12 a {
+  background: #ff568f;
 }
 .containerevent .card .box:hover,
-.containerevent .card .box:focus
-{
-    transform: translateY(-50px);
-    opacity: 1;
-    box-shadow: 0px 10px 20px rgba(0,0,0,0.2);
-    background: linear-gradient(45deg, #b95ce4,#4f29cd);
-
+.containerevent .card .box:focus {
+  transform: translateY(-50px);
+  opacity: 1;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(45deg, #b95ce4, #4f29cd);
 }
 .containerevent .card .box:hover .content12 h3,
 .containerevent .card .box:hover .content12 p,
 .containerevent .card .box:focus .content12 h3,
-.containerevent .card .box:focus .content12 p
-{
-    
-    color: #fff;
-
+.containerevent .card .box:focus .content12 p {
+  color: #fff;
 }
