--- a/static/css/events.css
+++ b/static/css/events.css
@@ -31,7 +31,7 @@
 
 .containerevent .card .box {
   position: absolute;
-  background-image: url("../../static/cs.png");
+  /* background-image: url("../../static/cs.png"); */
   background-position: center;
   background-size: 300px 300px;
   top: 20px;
@@ -44,6 +44,36 @@
   justify-content: center;
   align-items: center;
   transition: 0.5s;
+}
+.box1
+{
+    background-image: url("../../static/cs.png");
+
+}
+.box2
+{
+    background-image: url("../../static/cs.png");
+
+}
+.box3
+{
+    background-image: url("../../static/cs.png");
+
+}
+.box4
+{
+    background-image: url("../../static/cs.png");
+
+}
+.box5
+{
+    background-image: url("../../static/cs.png");
+
+}
+.box6
+{
+    background-image: url("../../static/cs.png");
+
 }
 .containerevent .card .box .content12 {
   padding: 20px;
