--- a/static/css/timeline.css
+++ b/static/css/timeline.css
@@ -12,6 +12,7 @@
   border-bottom: 1px solid whitesmoke;
   padding: 0 0 1px;
   font-family:sans-serif;
+  font-size: 2rem;
 }
 
 .timeline ul li {
@@ -76,7 +77,7 @@
   text-align: center;
   margin: auto;
   font-family: "Lucida Console", "Courier New", monospace;
-  font-size: 25px;
+  font-size: 1rem;
 }
 .timeline ul li div .date {
   margin-right: 10px;
