--- a/static/css/timeline.css
+++ b/static/css/timeline.css
@@ -116,16 +116,22 @@
     .timeline ul li:nth-of-type(even) > div{
         left: -45vw;
     }
+    .timeline ul li div h2 {
+      font-size: 2rem;
+    }
+    .timeline ul li div div span
+    {
+      font-size: 1rem;
+    }
 }
 @media screen and (max-width:650px){
   
   .timeline ul li div{
     width: 75vw;
-}
+  }
     
     .timeline ul li{
-        margin-left:10vw;
-
+      margin-left:10vw;
     }
     
     .timeline ul li:nth-of-type(even) > div{
@@ -140,10 +146,10 @@
       border-color: transparent #191b3f transparent transparent;
     }
     .timeline ul li div h2 {
-      font-size: 8vmin;
+      font-size: 3rem;
     }
     .timeline ul li div div span
     {
-      font-size: 6vmin;
+      font-size: 1.5rem;
     }
 }
