--- a/static/css/events.css
+++ b/static/css/events.css
@@ -47,7 +47,7 @@
 }
 .box1
 {
-    background-image: url("../../static/cs.png");
+    background-image: url("../../static/Hackstreet\ 2.png");
 
 }
 .box2
