--- a/static/css/events.css
+++ b/static/css/events.css
@@ -52,22 +52,22 @@
 }
 .box2
 {
-    background-image: url("../../static/cs.png");
+    background-image: url("https://res.cloudinary.com/dm0muijpa/image/upload/q_auto/xenith-23/events/rterror_fpbhak.png");
 
 }
 .box3
 {
-    background-image: url("../../static/cs.png");
+    background-image: url("https://res.cloudinary.com/dm0muijpa/image/upload/q_auto/xenith-23/events/tt_striver_hpvcyn.png");
 
 }
 .box4
 {
-    background-image: url("../../static/cs.png");
+    background-image: url("https://res.cloudinary.com/dm0muijpa/image/upload/q_auto/xenith-23/events/tarc_h70poa.png");
 
 }
 .box5
 {
-    background-image: url("../../static/cs.png");
+    background-image: url("https://res.cloudinary.com/dm0muijpa/image/upload/q_auto/xenith-23/events/tt_utkarsh_eicnfb.png");
 
 }
 .box6
