--- a/static/css/events.css
+++ b/static/css/events.css
@@ -72,7 +72,7 @@
 }
 .box6
 {
-    background-image: url("../../static/cs.png");
+    background-image: url("https://res.cloudinary.com/dm0muijpa/image/upload/v1675352900/xenith-23/events/treasure_trail_smocmd.png");
 
 }
 .containerevent .card .box .content12 {
